--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         border-radius: 10px;
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
@@ -52,6 +52,6 @@
 </head>
   <body class="text-slate-900 min-h-screen">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
